# event-horizon

./: .gitignore  Cargo.toml  Makefile.toml
observer/: Cargo.toml
observer/src/: main.rs  schema.rs
observer/src/detect/: errors.rs  mod.rs  syscalls.rs  utils.rs
observer/src/driver/: client.rs
observer/src/elastic/: client.rs  index.rs  mod.rs
observer/src/etw/: consumer.rs  controller.rs  errors.rs  event_parser.rs  manifest.rs  manifest_parser.rs  mod.rs  parser.rs  provider.rs  types.rs  utils.rs
shared/: Cargo.toml
shared/src/: lib.rs
singularity/: Cargo.toml  Makefile.toml  rust-toolchain.toml  singularity.inx
singularity/.cargo/: config.toml
singularity/src/: ioctl.rs  lib.rs  logger.rs  raii.rs
