[package]
name = "observer"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["serde"] }
url = "2.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ctrlc = "3.4"
windows-sys = {workspace = true}
shared = {path = "../shared"}