[package]
name = "observer"
version = "0.2.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Etw",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Time",
  "Win32_Security",
  "Win32_System_Registry",
] }
sha1 = "0.10"
log = "0.4.29"
env_logger = "0.11.9"
uuid = { version = "=1.11.0", features = ["v4"] }

